--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
-<h5>Popup</h5>
+<h5 >Popup</h5>
 <div class="p-fluid p-grid p-formgrid">
     <div class="p-field p-col-12 p-md-4">
-        <label for="basic">Basic</label>
+        <label for="basic" id="basic">Basic</label>
         <p-calendar inputId="basic" [(ngModel)]="date1" id="calendar_basic"></p-calendar>
     </div>
 
     <div class="p-field p-col-12 p-md-4">
         <label for="icon">Icon</label>
-        <p-calendar [(ngModel)]="date3" [showIcon]="true" inputId="icon" i="calendar_icon"></p-calendar>
+        <p-calendar [(ngModel)]="date3" [showIcon]="true" inputId="icon" id="calendar_icon"></p-calendar>
     </div>
 
     <div class="p-field p-col-12 p-md-4">
