--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,8 +29,8 @@
     </div>
 
     <div class="p-field p-col-12 p-md-4">
-        <label for="time">Time</label>
-        <p-calendar [(ngModel)]="date7" [showTime]="true" inputId="time" id="calendar_time"></p-calendar>
+        <label for="time">Date and Time</label>
+        <p-calendar [(ngModel)]="date7" [showTime]="true" inputId="time" id="calendar_date_time"></p-calendar>
     </div>
 
     <div class="p-field p-col-12 p-md-4">
