--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,8 +39,8 @@
     </div>
 
     <div class="p-field p-col-12 p-md-4">
-        <label for="multiple">Multiple</label>
-        <p-calendar [(ngModel)]="dates" selectionMode="multiple" [readonlyInput]="true" inputId="multiple" id="calendar_multiple"></p-calendar>
+        <label for="multiple">Multiple dates</label>
+        <p-calendar [(ngModel)]="dates" selectionMode="multiple" [readonlyInput]="true" inputId="multiple" id="calendar_multiple_dates"></p-calendar>
     </div>
 
     <div class="p-field p-col-12 p-md-4">
