--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="p-field p-col-12 p-md-4">
-        <label for="range">Range</label>
+        <label for="range">Range dates</label>
         <p-calendar [(ngModel)]="rangeDates" selectionMode="range" [readonlyInput]="true" inputId="range" id="calendar_range"></p-calendar>
     </div>
 
