--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h5 >Popup</h5>
+<h5>Popup</h5>
 <div class="p-fluid p-grid p-formgrid">
     <div class="p-field p-col-12 p-md-4">
         <label for="basic" id="basic">Basic</label>
@@ -34,12 +34,14 @@
 
     <div class="p-field p-col-12 p-md-4">
         <label for="multiple">Multiple dates</label>
-        <p-calendar [(ngModel)]="dates" selectionMode="multiple" [readonlyInput]="true" inputId="multiple" id="calendar_multiple_dates"></p-calendar>
+        <p-calendar [(ngModel)]="dates" selectionMode="multiple" [readonlyInput]="true" inputId="multiple"
+            id="calendar_multiple_dates"></p-calendar>
     </div>
 
     <div class="p-field p-col-12 p-md-4">
         <label for="range">Range dates</label>
-        <p-calendar [(ngModel)]="rangeDates" selectionMode="range" [readonlyInput]="true" inputId="range" id="calendar_range"></p-calendar>
+        <p-calendar [(ngModel)]="rangeDates" selectionMode="range" [readonlyInput]="true" inputId="range"
+            id="calendar_range"></p-calendar>
     </div>
 
     <div class="p-field p-col-12 p-md-4">
